# PriceTracker

./: .coverage  .dockerignore  .env  .gitignore  Dockerfile  LICENSE  README GitHub Repositiorio.md  README.md  basedatos.db  comandos_coverage.txt  comandos_mypy_ruff.txt  docker-compose.yml  main.py  prueba_bot.py  pyproject.toml  requirements.txt  test_env.py
.github/workflows/: ci.yml  docker-build.yml
.hypothesis/constants/: 2db25b2deb0360e4  67b0a8ccf18bf5d2  8df3273bd0755c73  b12d4728566e1881  b287288b4f59ba11  b4e4d9564cf6b023  c9a88d1139fafa4e  c9d1e7871423e2fb  da39a3ee5e6b4b0d  eba8ca31e25181a6
.hypothesis/examples/03b88a63c9d164f1/: 21d288542d3a1452  36425700ab273613  3e754dfba5655fe4  5cf9e12afc03541a  85bbab967e29f8e1  9284856e32e330c2  e8fe8c00cd5f707a  fa8d77a85cdfd805  fb38a0dfc2e718c7
.hypothesis/examples/04e6b3400353b141/: 03b88a63c9d164f1  0bf2ec34f1abd92c  0c7f68b6125447d3  2886948280667fce  2ecbdf7029c30b08  3a0a6462d7251758  582375d44bb96c91  7b754eba05f8bc9e  8f119529e2ce6cca  8ffd89717af46d9e  934c7bb0128e5207  a0f6928e8b67b0ef  c313f8b2ae41f35e
.hypothesis/examples/0c7f68b6125447d3/: 4c2dbc6bf66dc11a  60e94843aa5e7b75  7747455fbe86d043  78333955763cc1a5  7ead0414231d94fa
.hypothesis/examples/2886948280667fce/: 4165dd1e3b827d56
.hypothesis/examples/2ecbdf7029c30b08/: 8316a8352cc2c7d9  d91f79caf4be1f42
.hypothesis/examples/3a0a6462d7251758/: 4e0516b22114fea6
.hypothesis/examples/582375d44bb96c91/: 1cbf549964dcbffb  2c856fd40ff460e5  3da321bd827106b8  40e44556b5ce1c4d  7e00eabf088fe327  7f657f869a3acd2b  fbab039dd8e67995
.hypothesis/examples/7b754eba05f8bc9e/: 0f60895b7f12ffd4  52ecd34a85199415  5a32dccc39f1b121  7935b312b397f912  7a6b0cb2f48ee59c  8672988658d2c646  d316571c0d4ad42c
.hypothesis/examples/8f119529e2ce6cca/: 079f3ad3a4ba1648  08ac813f9a156666  1a2dbcbb056b2eb7  2ca1cdaf1f95c6d6  5ff2446fa916a47e  62e8dd59f83fea18  a8dccd5518a1d9cd
bot/: __init__.py  alerts.py  db_instance.py  db_manager.py  get_price.py  grafico.py  historial.py  mensajes_ayuda.py  price_checker.py  prueba.py  seguimiento.py  telegram_bot.py  user_session.py
doc/: index.html  search.js
doc/bot/: db_manager.html
docs/: bot.html  index.html  search.js
docs/bot/: db_instance.html  db_manager.html  get_price.html  grafico.html  mensajes_ayuda.html  seguimiento.html  telegram_bot.html
tests/: db_manager_test.py  test_alerts.py  test_db_manager.py  test_get_price.py  test_grafico.py  test_historial.py  test_mensajes_ayuda.py  test_price_checker.py  test_seguimiento.py  test_telegram_bot.py  test_user_session.py
