[project]
name = "pricetracker"
version = "0.1.0"
description = ""
authors = [
    {name = "CarlosMarrero98",email = "alu0101210995@ull.edu.es"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "python-telegram-bot[job-queue] (>=22.0,<23.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pdoc = "^15.0.3"
pytest-asyncio = "^0.26.0"
mypy = "^1.15.0"
types-requests = "^2.32.0.20250515"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
pythonpath = [
    "."
]

