[project]
name = "pricetracker"
version = "0.1.0"
description = ""
authors = [
    {name = "CarlosMarrero98",email = "alu0101210995@ull.edu.es"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "python-telegram-bot[job-queue] (>=22.0,<23.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pdoc = "^15.0.3"
pytest-asyncio = "^0.26.0"
mypy = "^1.15.0"
types-requests = "^2.32.0.20250515"
pytest-cov = "^6.1.1"
pandas-stubs = "^2.2.3.250527"
ruff = "^0.11.12"
hypothesis = "^6.131.32"
pylint = "^3.3.7"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
pythonpath = [
    "."
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
exclude = ["tests/"]


[tool.ruff]
line-length = 125
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4", "ANN"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ALL"]